--- a/connect4.css
+++ b/connect4.css
@@ -17,11 +17,11 @@
 }
 
 /* TODO: make pieces red/blue,  depending on player 1/2 piece */
-.Player1 {
+.p1 {
   background-color: red;
 }
 
-.Player2 {
+.p2 {
   background-color: blue; 
 }
 /* column-top is table row of clickable areas for each column */
